##############################################################################
# SvxLink test suite
#
# Top-level entry point — mirrors the src/ subtree layout so that tests for
# src/foo/bar/Baz.cpp live under tests/foo/bar/.
##############################################################################

add_subdirectory(async/core)
